--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    {% block 'head' %}
-
-    {% endblock %}
+    {% block 'head' %}{% endblock %}
     <title>{% block 'title' %}{% endblock %}</title>
 </head>
 <body>
@@ -15,5 +13,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    {% block javascript %}
+    {% endblock %}
 </body>
 </html>
